--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "JS AMAZONA",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --watch  backend  --exec babel-node backend/server.js ",
+    "test": " babel-node test"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,14 @@
   "homepage": "https://github.com/LautaroMRA02/Full_ECommerce#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/node": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "eslint": "^8.5.0"
   }
 }
