--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,11 @@
   },
   "homepage": "https://github.com/LautaroMRA02/Full_ECommerce#readme",
   "devDependencies": {
+    "axios": "^0.24.0",
     "live-server": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {
-    "axios": "^0.24.0"
-  }
+  "dependencies": {}
 }
